# rusty-krab-manager

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: CI.yml
assets/: config.template.toml  tasks
example/: config  config.toml  tasks
rusty-manager/: Cargo.toml
rusty-manager/src/: assignment_utils.rs  main.rs  rand_utils.rs  ui.rs
src/: app.rs  assignment_utils.rs  default_files.rs  fileops_utils.rs  io.rs  main.rs  posttask_utils.rs  rand_utils.rs  settings_util.rs  sound_utils.rs
src/ui/: event.rs  mod.rs
test_data/: assignments
