[package]
name = "rusty-krab-manager"
version = "1.1.3"
authors = ["luak <arya_kaul@g.harvard.edu>"]
edition = "2018"
readme = "README.md"
license-file = "./LICENSE"
description = """
Time management TUI inspired by the pomodoro technique as described by Francesco Cirillo
"""
homepage = "https://github.com/aryakaul/rusty-krab-manager"
repository = "https://github.com/aryakaul/rusty-krab-manager"
documentation = "https://github.com/aryakaul/rusty-krab-manager/wiki"
keywords = ["time-management", "tui", "rusty-krab-manager"]
categories = ["command-line-utilities"]
exclude = ["example/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
chrono = "0.4"
tui = "0.12"
termion = "1.5"
config = "0.10"
rodio = "0.13"
dirs = "3.0"
pathsep = "0.1"
tinytemplate = "1.0"
serde = "1.0.116"
serde_derive = "1.0"
