[package]
name = "rusty-krab-manager"
version = "1.2.3"
authors = ["luak <arya_kaul@g.harvard.edu>"]
edition = "2018"
readme = "README.md"
license-file = "./LICENSE"
description = """
Time management TUI inspired by the pomodoro technique as described by Francesco Cirillo
"""
homepage = "https://github.com/aryakaul/rusty-krab-manager"
repository = "https://github.com/aryakaul/rusty-krab-manager"
documentation = "https://github.com/aryakaul/rusty-krab-manager/wiki"
keywords = ["time-management", "tui", "rusty-krab-manager"]
categories = ["command-line-utilities"]
exclude = ["example/*"]


[dependencies]
rand = "0.8.3"
chrono = "0.4"
tui = "0.17"
termion = "1.5.6"
config = "0.11"
#rodio = { version = "0.15", features = ["symphonia-all"], default-features = false}
rodio = "0.15" 
dirs = "4.0"
pathsep = "0.1"
tinytemplate = "1.2.1"
serde ={ version = "1.0.123", features = ["derive"] }
clap = "3.1.2"
notify-rust = "4"
